@@ -1,6 +1,0 @@
-<span {{{'id':context.id, 'class':context.klass,
-      'title':context.title, 'lang':context.lang}|xmlattr}}>
-  {% for value in context.displayValue %}
-    <span class="selected-option">{{value}}</span>
-  {% endfor %}
-</span>
