@@ -1,13 +1,0 @@
-<div class="control-group">
-  <label for="{{context.id}}" title="{{context.description}}">
-    {{context.title|safe}}
-    {% if context.required %}*{% endif %}
-  </label>
-
-  <div class="controls">
-    {{context.render()|safe}}
-    {% if context.description %}
-    <p class="help-block">{{context.description|safe}}</p>
-    {% endif %}
-  </div>
-</div>
