@@ -1,12 +1,0 @@
-{%if context.label%}<h2>{{context.label|safe}}</h2>{%endif%}
-{%if context.description%}<p>{{context.description}}</p>{%endif%}
-
-{% if context.widgets %}
-<form>
-  <fieldset>
-    {% for widget in context.widgets.values() %}
-      {{widget.render_widget()|safe}}
-    {% endfor %}
-  </fieldset>
-</form>
-{% endif %}
