@@ -9,6 +9,8 @@ CHANGES
 
 - Render str in `form:error` message
 
+- Removed `display` mode
+
 
 0.3 (11-27-2012)
 ================
